<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:bind="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewModel"
      type="com.takhir.weather.viewmodel.DetailViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.DetailActivity">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="2"
      bind:visibleOrGone="@{viewModel.entity != null}">

      <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_delete"/>

      <Button
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_update"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:weightSum="2">

      <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="@string/text_city_name"/>

      <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@={viewModel.name}"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:weightSum="2">

      <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="@string/text_city_type"/>

      <Spinner
        android:id="@+id/spinner_city_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:entries="@array/min_city_type"
        android:prompt="@string/spinner_text_type" />
    </LinearLayout>



<!--    <include-->
<!--      layout="@layout/layout_season_item"-->
<!--      bind:viewModel="@{viewModel}"-->
<!--      bind:firstIndex="@{0}"-->
<!--      bind:firstName='@{"December"}'-->
<!--      bind:secondIndex="@{1}"-->
<!--      bind:secondName='@{"January"}'-->
<!--      bind:thirdIndex="@{2}"-->
<!--      bind:thirdName='@{"February"}'-->
<!--      />-->
<!--    -->
<!--    <include-->
<!--      layout="@layout/layout_season_item"-->
<!--      bind:viewModel="@{viewModel}"-->
<!--      bind:firstIndex="@{3}"-->
<!--      bind:firstName='@{"March"}'-->
<!--      bind:secondIndex="@{4}"-->
<!--      bind:secondName='@{"April"}'-->
<!--      bind:thirdIndex="@{5}"-->
<!--      bind:thirdName='@{"May"}'-->
<!--      />-->

<!--    <include-->
<!--      layout="@layout/layout_season_item"-->
<!--      bind:viewModel="@{viewModel}"-->
<!--      bind:firstIndex="@{6}"-->
<!--      bind:firstName='@{"June"}'-->
<!--      bind:secondIndex="@{7}"-->
<!--      bind:secondName='@{"July"}'-->
<!--      bind:thirdIndex="@{8}"-->
<!--      bind:thirdName='@{"August"}'-->
<!--      />-->

<!--    <include-->
<!--      layout="@layout/layout_season_item"-->
<!--      bind:viewModel="@{viewModel}"-->
<!--      bind:firstIndex="@{9}"-->
<!--      bind:firstName='@{"September"}'-->
<!--      bind:secondIndex="@{10}"-->
<!--      bind:secondName='@{"October"}'-->
<!--      bind:thirdIndex="@{11}"-->
<!--      bind:thirdName='@{"November"}'-->
<!--      />-->

    <Button
      android:id="@+id/btn_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/btn_text_create"
      bind:visibleOrGone="@{viewModel.entity == null}"/>
  </LinearLayout>
</layout>